# sbrt-acoustic-rainfall

./: .gitignore  README.md  pyproject.toml
notebooks/IDSM/: Resultados_Direto_5Classes_NuSVC_IDSM.csv  Resultados_Direto_5Classes_PSD_RF_IDSM.csv  Resultados_Direto_5Classes_PSD_XGB_IDSM.csv  Resultados_Exp.1_5Classes_LR_IDSM.csv  Resultados_Exp.1_5Classes_PSD_LR_IDSM.csv  Resultados_Exp.1_5Classes_PSD_SGD_IDSM.csv  Resultados_Exp.1_5Classes_RF_IDSM.csv  Resultados_Exp.1_5Classes_SGD_IDSM.csv  Resultados_Exp.1_5Classes_XGB_IDSM.csv  Resultados_Exp.2.1_Binario_Detalhado_IDSM.csv  Resultados_Exp.2.2_Intensidade_LR_Detalhado_IDSM.csv  Resultados_Exp.2.2_Intensidade_NuSVC_IDSM.csv  Resultados_Exp.2.2_Intensidade_RF_Detalhado_IDSM_RF.csv  Resultados_Exp.2.2_Intensidade_SGD_Detalhado_IDSM.csv  Resultados_Exp.2.2_Intensidade_XGB_Detalhado_IDSM.csv
notebooks/UECE/: 01_data_curation.ipynb  02_metrics_extraction.ipynb  Resultados_Direto_5Classes_NuSVC_UECE.csv  Resultados_Direto_5Classes_PSD_LR_UECE.csv  Resultados_Direto_5Classes_PSD_RF_UECE.csv  Resultados_Direto_5Classes_PSD_SGD_UECE.csv  Resultados_Direto_5Classes_PSD_XGB_UECE.csv  Resultados_Exp.1_5Classes_LR_UECE.csv  Resultados_Exp.1_5Classes_RF_UECE.csv  Resultados_Exp.1_5Classes_SGD_UECE.csv  Resultados_Exp.1_5Classes_XGB_UECE.csv  Resultados_Exp.1_Binario_UECE.csv  Resultados_Exp.2.1_Binario_Corrigido_UECE.csv  Resultados_Exp.2.2_Intensidade_LR_Detalhado_UECE.csv  Resultados_Exp.2.2_Intensidade_RF_Detalhado_UECE_RF.csv  UECE_pipeline.py  (+2 more)
rainfall_acoustic_classification/: __init__.py  utils.py
(+25 files in other folders)
